# judging-ingredients

./: README.md  judging_ingredients_functions.py  pyproject.toml  test_j_i_functions.py
.github/workflows/: main.yml  version1.yml
