[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "judging ingredients"
version = "0.1.0"
description = "Package of functions needed to run user interface program to determine if qantity or type can be used to make bread."
authors = [
    {name = "Akari de Kroon", email = "ammdekroon@tudelft.nl"},
    ]
dependencies = ["python"]
